<resources>
    <string name="app_name">Remaidy</string>
    <string name="login_menu">Login Menu</string>
    <string name="settings">Settings</string>
    <string name="control_panel">Control Panel</string>
    <string name="welcome_message">Welcome! Please log in using buttons below.</string>
    <string name="user">User</string>
    <string name="carer">Carer</string>
    <string name="logo_picture">Logo picture</string>
    <string name="main_menu">Main menu</string>
    <string name="greeting_header">Hi!</string>
    <string name="select_options_header">Select from options below</string>
    <string name="gallery">Gallery</string>
    <string name="upload_questions">Upload questions</string>
    <string name="upload_questions2">Upload and edit questions</string>
    <string name="quiz">Quiz</string>
    <string name="login_successful">You have been logged in successfully!</string>
    <string name="main_menu_greeting">Welcome to Remaidy!</string>
    <string name="main_menu_1">This app purpose is to help you revisit your past memories.</string>
    <string name="main_menu_2">Please ask your carer for help if you are unsure what to do.</string>
    <string name="control_panel_1">Please read instructions below.</string>
    <string name="control_panel_2">For action menu, please press button in left top corner.</string>
    <string name="main_menu_4">If the text is too small, please press the button below.
        This will take you to the system accessibility settings where you can change
        screen and font size.</string>
    <string name="main_menu_button1">display settings</string>
    <string name="main_menu_5">To do:</string>
    <string name="card3_2_heading">Check</string>
    <string name="card3_3_heading">Reports</string>
    <string name="card3_1_subheading">Select photos from your device in landscape aspect ratio, fill in text boxes with question description and 4 answers</string>
    <string name="card3_2_subheading">Check uploaded questions, switch to patient mode, hand over the tablet to the patient and start the quiz</string>
    <string name="card3_3_subheading">To access reports from each quiz, please log into control panel and tap \'Quiz reports history\'</string>
    <string name="upload">Upload</string>
    <string name="open">Open</string>
    <string name="finish">Finish</string>
    <string name="patient_mode">Patient Mode</string>
    <string name="questions_edit_panel">Questions edit panel</string>
    <string name="edit_question">Edit question</string>
    <string name="question_name">Question name (e.g. Where was that photo taken?)</string>
    <string name="correct_answer">Correct answer (e.g. London)</string>
    <string name="other_answer">Other answer (incorrect)</string>
    <string name="answer">Answer</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="emptyFields">Please check if all fields are non-empty before submitting.</string>
    <string name="noPhoto">Please upload the photo.</string>
    <string name="next">Next</string>
    <string name="notDistinctiveAnswers">Please make sure all answers are distinct.</string>
    <string name="congratulations">Congratulations! You\'ve completed your quiz!</string>
    <string name="placeholder">Placeholder</string>
    <string name="end_quiz">Quiz summary</string>
    <string name="quiz_history">Quiz reports history</string>
    <string name="no_questions_error">Please ask carer to upload questions first.</string>
</resources>