<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mainMenu"
            android:icon="@drawable/ic_home_foreground"
            android:title="@string/main_menu" />
        <item
            android:id="@+id/questionsList"
            android:icon="@drawable/ic_upload_foreground"
            android:title="@string/upload_questions2" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/helpDrawer"
            android:icon="@drawable/ic_question_foreground"
            android:title="@string/help" />
        <item
            android:id="@+id/patientMode"
            android:icon="@drawable/ic_control_panel_foreground"
            android:title="@string/patient_mode" />
    </group>

</menu>